<resources>
    <string name="app_name">Larapick</string>
    <string name="content_description">Content Description</string>
    <string name="loading">Loading</string>
    <string name="name">Nama</string>
    <string name="show_qr_code">Tampilkan QR Code</string>
    <string name="place_date_of_birth">Tempat, Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="address">Alamat</string>
    <string name="phone">Telepon</string>
    <string name="grade">Kelas</string>
    <string name="profile_student">Data Diri Anak</string>
    <string name="qr_code">QR Code</string>
    <string name="description_scan_qr_code">Pindai QR Code ini untuk menjemput anak anda di sekolah.</string>
    <string name="change_password">Perbarui Password</string>
    <string name="profile_guardian">Data Diri</string>
    <string name="logs_pickup">Riwayat Penjemputan</string>
    <string name="logout">Keluar</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome">Selamat Datang</string>
    <string name="description_welcome">Masuk ke aplikasi dengan akun yang sudah terdaftar</string>
    <string name="desc_scan_qr_code">Harap lakukan scan QR Code yang diberikan oleh orang tua siswa dan lakukan konfirmasi penjemputan.</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="update">Perbarui</string>
    <string name="confirm">Konfirmasi</string>
    <string name="pickup">Penjemput</string>
    <string name="empty_data">Tidak ada data</string>
    <string name="filter">Filter</string>
    <string name="back">Kembali</string>
    <string name="year">Tahun</string>
    <string name="month">Bulan</string>
    <string name="job">Pekerjaan</string>
    <string name="relationship">Hubungan</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="profile_pickuper">Data Diri Penjemput</string>
    <string name="no_image">No Image</string>
    <string name="note">Catatan</string>
    <string name="see_image">Lihat Gambar</string>
    <string name="nik">NIK</string>
    <string name="other_pickup">Penjemputan Lainnya</string>
    <string name="arrive">Tiba</string>
    <string name="desc_other_pickup">Harap isi form berikut untuk penjemputan lainnya. Misal penjemputan oleh ojek online.</string>
    <string name="student">Siswa</string>
    <string name="submit">Submit</string>
    <string name="image">Foto</string>
    <string name="status">Status</string>
</resources>