<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:fillViewport="true"
    android:contentDescription="@string/content_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="24dp"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="245dp"
            android:layout_height="45dp"
            android:contentDescription="@string/content_description"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_marginTop="32dp"
            android:textAppearance="@style/TextView.CustomFontBold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description_welcome"
            android:textAppearance="@style/TextView.CustomFontRegular"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextAppearanceError">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextView.CustomFontRegular"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textSize="14sp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextAppearanceError"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAppearance="@style/TextView.CustomFontRegular"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:textAppearance="@style/TextView.CustomFontMedium"
            android:textSize="14sp"
            tools:ignore="VisualLintButtonSize" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>